--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "axios": "^0.21.0",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "path": "^0.12.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "braces": ">=2.3.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "path": "^0.12.7",
     "copy-webpack-plugin": "^6.3.1",
     "node-sass": "^5.0.0",
     "sass": "^1.29.0",
