--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@types/react-dom": "^16.9.9",
     "axios": "^0.21.0",
     "react": "^17.0.1",
+    "react-colorful": "^4.4.2",
     "react-dom": "^17.0.1",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "braces": ">=2.3.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "path": "^0.12.7",
+    "braces": ">=2.3.1",
     "copy-webpack-plugin": "^6.3.1",
+    "css-loader": "^5.0.1",
     "node-sass": "^5.0.0",
+    "path": "^0.12.7",
     "sass": "^1.29.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
