--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,11 @@
 platform = espressif32
 board = heltec_wifi_kit_32
 framework = arduino
-lib_deps = 
+lib_deps =
 	fastled/FastLED@^3.3.3
 	olikraus/U8g2@^2.28.8
 	ESP Async WebServer
 monitor_speed = 115200
+
+;upload_protocol = espota
+;upload_port = 192.168.2.14
